<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">




    <!-- Linear layout to contain all the
         editText, password , logo and button-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingStart="28dp"
        android:paddingEnd="28dp"
        android:layout_centerInParent="true">

        <!-- Imageview displaying the logo
                or name of the application-->
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="147dp"
            android:layout_height="82dp"
            android:adjustViewBounds="true"
            android:src="@drawable/instagram" />

        <!-- Edit text provided to user to
             enter email, username or phone no.-->
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:padding="12dp"
            android:id="@+id/edt_email"
            android:singleLine="true"
            android:layout_marginTop="22dp"
            android:hint="@string/email_or_username"
            android:background="@drawable/background_edit_text"/>


        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:padding="12dp"
            android:id="@+id/edt_name"
            android:singleLine="true"
            android:layout_marginTop="22dp"
            android:hint="@string/name"
            android:background="@drawable/background_edit_text"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:padding="12dp"
            android:id="@+id/edt_phone"
            android:singleLine="true"
            android:layout_marginTop="22dp"
            android:hint="@string/phone_number"
            android:background="@drawable/background_edit_text"/>



        <!-- Edit text provided to write
              password (according to instagram UI)-->
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:padding="12dp"
            android:id="@+id/edt_password"
            android:singleLine="true"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            android:background="@drawable/background_edit_text"
            android:drawableRight="@drawable/baseline_remove_red_eye_24"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressbar"
                android:layout_centerInParent="true"
                />



            <!-- material button is used to display the "Login" button to user-->
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sing_up"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:id="@+id/img_sign_up"
                android:padding="12dp"
                android:layout_marginTop="18dp"
                android:backgroundTint="#3897f0"
                app:cornerRadius="4dp"/>



        </RelativeLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="#e2e2e2"
        android:layout_marginBottom="8dp"/>

    <!-- text view to show the message
          "Dont have an account?Sign up-->
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/img_login"
        android:text="@string/log_in"
        android:textSize="12sp"
        android:textAlignment="center"
        android:layout_marginBottom="14dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal" />



</RelativeLayout>